--- a/package/vignettes/csaw.Rnw
+++ b/package/vignettes/csaw.Rnw
@@ -16,7 +16,7 @@
 \title{Introducing the csaw package}
 \author{Aaron Lun}
 \date{First edition 21 June 2014\\[0.05in]
-Last revised 10 October 2014}
+Last revised 19 March 2015}
 \maketitle
 
 The \texttt{csaw} package is designed for the \textit{de novo} detection of differentially bound regions from ChIP-seq data. 
@@ -25,7 +25,7 @@ Each window is then tested for significant differences between libraries, using 
 \texttt{csaw} can be applied to any data set containing multiple conditions, though biological replication is strongly recommended for each condition.
 While intended for ChIP-seq data, the methods in this package can also be applied to any type of sequencing data where changes in genomic coverage are of interest.
 
-On a technical level, the \texttt{csaw} package provides methods for flexible counting of single- or paired-end reads within sorted and indexed BAM files. 
+More specifically, the \texttt{csaw} package provides methods for flexible counting of single- or paired-end reads within sorted and indexed BAM files. 
 It implements statistical procedures that maintain control of the false discovery rate across aggregated windows. 
 Procedures for normalization of window counts between libraries are described, along with methods for independent filtering of uninteresting windows.
 The full user's guide is available as part of the online documentation and can be obtained by typing:
